[shenker/microscope_design] Resampling to objective resolution, prism displacement, binning, and spectral stacking to get final image.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -19,7 +19,8 @@
     "import tifffile\n",
     "import scipy.stats\n",
     "import skimage\n",
-    "import skimage.filters"
+    "import skimage.filters\n",
+    "from tqdm.auto import tqdm, trange"
    ]
   },
   {
@@ -180,7 +181,8 @@
     "    1,\n",
     "    p_vertical=3,\n",
     "    p_horizontal=6,\n",
-    "    height_px=60,\n",
+    "    height_padding_factor=10,\n",
+    "    height_px=100,\n",
     "    width_px=6500,\n",
     ")"
    ]
@@ -564,7 +566,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reflected emission"
+    "# Reflected excitation"
    ]
   },
   {
@@ -610,7 +612,183 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Resampling to objective resolution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2D blur to NA\n",
+    "# resample x coord (blur to NA, bin+mean [do we need to be careful about normalization?])\n",
+    "# blur y coord to NA\n",
+    "# we have camera y,x grid; groupby_bins each em-slice to the camera y,x grid\n",
+    "# do this fast??\n",
+    "# multiply by camera QE (along em)\n",
+    "# sum along em"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emission_blurred = emission_with_reflected.copy(deep=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scale_x = simulation.bin_size(emission_with_reflected.x.values)\n",
+    "scale_y = simulation.bin_size(emission_with_reflected.y.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objective_na = 0.8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emission_blurred[130].plot(aspect=20, size=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "airy_sigma = 0.42 * 400 * 1e-3 * (2 / objective_na)\n",
+    "i = 130\n",
+    "x = scipy.ndimage.gaussian_filter(\n",
+    "    emission_blurred.values[i],\n",
+    "    (airy_sigma / scale_y, airy_sigma / scale_x),\n",
+    "    output=emission_blurred.values[i],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emission_blurred[131].plot(aspect=20, size=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in trange(emission_blurred.sizes[\"em\"]):\n",
+    "    airy_sigma = 0.42 * emission_blurred.em.values[i] * 1e-3 * (2 / objective_na)\n",
+    "    scipy.ndimage.gaussian_filter(\n",
+    "        emission_blurred.values[i],\n",
+    "        (airy_sigma / scale_y, airy_sigma / scale_x),\n",
+    "        output=emission_blurred.values[i],\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emission_blurred[131].plot(aspect=20, size=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Prism"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zero_deflection = 800  # nm\n",
+    "max_deflection = 300  # nm\n",
+    "sensor_spectrum_height = 100  # px"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sensor_y_bins = np.arange(0, sensor_spectrum_height + 1)\n",
+    "# TODO: need to adjust endpoints to match zero/max deflection\n",
+    "# 0.5 shifts (first pixel is 0-to-1)\n",
+    "prism_displacements = (\n",
+    "    np.linspace(0, sensor_spectrum_height, emission_blurred.sizes[\"em\"])[::-1] + 0.5\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prism_output = [\n",
+    "    simulation.shift_xarray(emission_blurred[i].copy(), {\"y\": prism_displacements[i]})\n",
+    "    for i in range(emission_blurred.sizes[\"em\"])\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prism_output[151].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: rename+relabel y_bins to midpoint (?)\n",
+    "prism_output_binned = [\n",
+    "    em_slice.groupby_bins(\"y\", sensor_y_bins).mean().fillna(0)\n",
+    "    for em_slice in tqdm(prism_output)\n",
+    "]\n",
+    "prism_output_binned = xr.concat(prism_output_binned, dim=\"em\", join=\"exact\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prism_output_binned[80].plot()"
    ]
   },
   {
@@ -618,6 +796,24 @@
    "metadata": {},
    "source": [
     "# Camera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "camera_incident_no_qe = prism_output_binned.sum(\"em\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "camera_incident_no_qe.plot(size=20)"
    ]
   },
   {
