--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -846,253 +846,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mirror_spectra = {\n",
-    "    \"UV\": \"data/thorlabs_mirrors/Thorlabs_UV-Enhanced_Aluminum_Coating.xlsx\",\n",
-    "    \"Aluminum\": \"data/thorlabs_mirrors/Thorlabs_Protected_Aluminum_Coating.xlsx\",\n",
-    "    \"Silver\": \"data/thorlabs_mirrors/Thorlabs_Protected_Silver_Coating.xlsx\",\n",
-    "    \"E01\": \"data/thorlabs_mirrors/E01ReflectionData.xlsx\",\n",
-    "    \"E02\": \"data/thorlabs_mirrors/E02ReflectionData.xlsx\",\n",
-    "}\n",
-    "all_mirrors = pd.DataFrame(\n",
-    "    {\n",
-    "        name: simulation.read_thorlabs(filename)[(\"45° AOI\", \"Unpol\")]\n",
-    "        for name, filename in mirror_spectra.items()\n",
-    "    }\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_mirrors.plot(xlim=(300, 800))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(all_mirrors**6).plot(xlim=(300, 800))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# c = '% Reflectance (45°, S-Pol.)' # S-Pol\n",
-    "c = \"Reflectance, P-Pol. (%)\"  # P-Pol\n",
-    "# c = \"% Reflectance\" # Reflectance\n",
-    "# c = \"Reflectance (%)\" # Reflectance\n",
-    "# re.sub(r\"(?:% )?Reflectance, \\(?((?:(?![()])\\w)+)\\.\\)?\", \"\\\\1\", c)\n",
-    "# re.sub(r\"Reflectance \\(([0-9A-Za-z °,.-]+)\\)\", \"\\\\1\", c)\n",
-    "re.sub(r\"(?:% )?Reflectance \\((?:((?:(?![(),]).)+), )?((?:(?![(),]).)+)\\)\", \"\\\\2\", c)\n",
-    "THORLABS_COLUMN_RE = r\"(?:% )?Reflectance(?: \\((?:((?:(?![(),]).)+), )?((?:(?![(),]).)+)\\)|, (\\S+) \\(%\\))\"\n",
-    "re.sub(THORLABS_COLUMN_RE, \"\\\\3\", c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = \"data/thorlabs_mirrors/E02ReflectionData.xlsx\"\n",
-    "# f = \"data/thorlabs_mirrors/E01ReflectionData.xlsx\"\n",
-    "# f = \"data/thorlabs_mirrors/Thorlabs_Protected_Aluminum_Coating.xlsx\"\n",
-    "# f = \"data/thorlabs_mirrors/Thorlabs_Protected_Silver_Coating.xlsx\"\n",
-    "# f = \"data/thorlabs_mirrors/Thorlabs_UV-Enhanced_Aluminum_Coating.xlsx\"\n",
-    "# f = \"data/thorlabs_lenses/A_Broadband_AR-Coating.xlsx\"\n",
-    "# f = \"data/thorlabs_lenses/AB_Broadband_AR-Coating.xlsx\"\n",
-    "# f = \"data/thorlabs_lenses/UVFS_UV_Broadband_AR-Coating.xlsx\"\n",
-    "# f = \"data/thorlabs_lenses/A_Variance_Data.xlsx\"\n",
-    "###\n",
-    "# f = \"data/thorlabs_mirrors/E02_Variance_Raw_Data.xlsx\"\n",
-    "simulation.read_thorlabs(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = _"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.interpolate().plot(xlim=(300, 800), legend=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = a.iloc[:, 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b[~b.isnull()].plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.loc[: a.last_valid_index()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulation.read_thorlabs(\"data/thorlabs_mirrors/E02_Variance_Raw_Data.xlsx\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.read_excel?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = pd.read_excel(\n",
-    "    \"data/thorlabs_mirrors/Thorlabs_Protected_Silver_Coating.xlsx\",\n",
-    "    sheet_name=0,\n",
-    "    header=None,\n",
-    "    nrows=1,\n",
-    ")  # .isnull().values.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[2].values[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_excel(\n",
-    "    \"data/thorlabs_mirrors/E02_Variance_Raw_Data.xlsx\",\n",
-    "    sheet_name=0,\n",
-    "    # usecols=lambda x: \"Unnamed\" not in x,\n",
-    "    skiprows=1,\n",
-    "    header=(0, 1),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.loc[:, ~df.columns.get_level_values(0).str.startswith(\"Unnamed\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.iloc[:, 3:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = df.columns.str.startswith(\"Wavelength\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "splits = np.concatenate((np.where(a)[0], (len(df.columns),)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = np.vstack((splits[:-1], splits[1:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.iloc[:, slice(*b[0])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "simulation.read_thorlabs(\n",
     "    \"data/thorlabs_mirrors/Thorlabs_Protected_Aluminum_Coating.xlsx\"\n",
     ")"
@@ -1104,7 +857,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulation.read_thorlabs(\"data/thorlabs_lenses/A_Broadband_AR-Coating.xlsx\")"
+    "mirror_spectra = {\n",
+    "    \"UV\": \"data/thorlabs_mirrors/Thorlabs_UV-Enhanced_Aluminum_Coating.xlsx\",\n",
+    "    \"Aluminum\": \"data/thorlabs_mirrors/Thorlabs_Protected_Aluminum_Coating.xlsx\",\n",
+    "    \"Silver\": \"data/thorlabs_mirrors/Thorlabs_Protected_Silver_Coating.xlsx\",\n",
+    "    \"E01\": \"data/thorlabs_mirrors/E01ReflectionData.xlsx\",\n",
+    "    \"E02\": \"data/thorlabs_mirrors/E02ReflectionData.xlsx\",\n",
+    "}\n",
+    "mirror_spectra = pd.DataFrame(\n",
+    "    {\n",
+    "        name: simulation.read_thorlabs(filename)[(\"45°\", \"Unpol.\")]\n",
+    "        for name, filename in mirror_spectra.items()\n",
+    "    }\n",
+    ").interpolate()"
    ]
   },
   {
@@ -1113,9 +878,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulation.read_thorlabs(\n",
-    "    \"data/thorlabs_mirrors/Thorlabs_UV-Enhanced_Aluminum_Coating.xlsx\"\n",
-    ")"
+    "mirror_spectra.plot(xlim=(300, 800))"
    ]
   },
   {
@@ -1124,14 +887,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mirror_reflectance = simulation.format_thorlabs(\n",
-    "    pd.read_excel(\n",
-    "        \"data/thorlabs_mirrors/Thorlabs_UV-Enhanced_Aluminum_Coating.xlsx\",\n",
-    "        sheet_name=\"45° AOI\",\n",
-    "        usecols=\"C:F\",\n",
-    "    )\n",
-    ")\n",
-    "mirror_reflectance"
+    "lens_spectra = {\n",
+    "    \"A\": \"data/thorlabs_lenses/A_Broadband_AR-Coating.xlsx\",\n",
+    "    \"AB\": \"data/thorlabs_lenses/AB_Broadband_AR-Coating.xlsx\",\n",
+    "    \"UVFS\": \"data/thorlabs_lenses/UVFS_UV_Broadband_AR-Coating.xlsx\",\n",
+    "}\n",
+    "lens_spectra = pd.DataFrame(\n",
+    "    {\n",
+    "        name: simulation.read_thorlabs(filename)[\"Reflectance\"]\n",
+    "        for name, filename in lens_spectra.items()\n",
+    "    }\n",
+    ").interpolate()"
    ]
   },
   {
@@ -1140,7 +906,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mirror_reflectance[\"Unpol\"].plot(xlim=(300, 800))"
+    "lens_spectra.plot(xlim=(300, 800))"
    ]
   }
  ],
