[shenker/microscope_design] End-to-end system spectra.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -824,31 +824,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "uv_aluminum = simulation.read_thorlabs(\n",
-    "    \"data/thorlabs_mirrors/Thorlabs_UV-Enhanced_Aluminum_Coating.xlsx\"\n",
-    ")\n",
-    "aluminum = simulation.read_thorlabs(\n",
-    "    \"data/thorlabs_mirrors/Thorlabs_Protected_Aluminum_Coating.xlsx\"\n",
-    ")\n",
-    "silver = simulation.read_thorlabs(\n",
-    "    \"data/thorlabs_mirrors/Thorlabs_Protected_Silver_Coating.xlsx\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulation.read_thorlabs(\n",
-    "    \"data/thorlabs_mirrors/Thorlabs_Protected_Aluminum_Coating.xlsx\"\n",
-    ")"
+    "## Thorlabs mirrors/lenses"
    ]
   },
   {
@@ -907,6 +886,104 @@
    "outputs": [],
    "source": [
     "lens_spectra.plot(xlim=(300, 800))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sensor QE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imx342 = pd.read_csv(\n",
+    "    \"data/sensor_qe/imx342.csv\", names=[\"Wavelength\", \"QE\"], skiprows=1\n",
+    ")\n",
+    "# imx342.columns = [\"Wavelength\", \"QE\"]\n",
+    "imx342.set_index(\"Wavelength\", inplace=True)\n",
+    "imx342 /= 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kinetix = pd.read_csv(\"data/sensor_qe/kinetix.csv\", names=[\"Wavelength\", \"QE\"])\n",
+    "kinetix.set_index(\"Wavelength\", inplace=True)\n",
+    "kinetix /= 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emission_path_spectra = pd.concat(\n",
+    "    (\n",
+    "        kinetix[\"QE\"].rename(\"Kinetix\"),\n",
+    "        imx342[\"QE\"].rename(\"IMX342\"),\n",
+    "        mirror_spectra[\"E02\"],\n",
+    "        mirror_spectra[\"Silver\"],\n",
+    "        lens_spectra[\"A\"],\n",
+    "    ),\n",
+    "    axis=1,\n",
+    ").interpolate()\n",
+    "emission_path_spectra.plot(xlim=(300, 800))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emission_path_spectra[\"Kinetix final\"] = (\n",
+    "    (1 - emission_path_spectra[\"A\"]) ** 2\n",
+    "    * emission_path_spectra[\"E02\"] ** 6\n",
+    "    * emission_path_spectra[\"Silver\"]\n",
+    "    * emission_path_spectra[\"Kinetix\"]\n",
+    ")\n",
+    "emission_path_spectra[\"IMX342 final\"] = (\n",
+    "    1 - emission_path_spectra[\"A\"]\n",
+    ") * emission_path_spectra[\"IMX342\"]\n",
+    "emission_path_spectra[\"Kinetix advantage\"] = (\n",
+    "    emission_path_spectra[\"Kinetix final\"] - emission_path_spectra[\"IMX342 final\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emission_path_spectra[[\"Kinetix final\", \"IMX342 final\", \"Kinetix advantage\"]].plot(\n",
+    "    xlim=(300, 800), figsize=(15, 6)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emission_path_spectra[\"Kinetix advantage\"].plot(xlim=(300, 800), figsize=(15, 6))"
    ]
   }
  ],
