[fp_aggregation] sarted writing RDF function, need to debug e.g. when r is bigger than ref + dimensionof overall image in one/more directions

--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis testing.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis testing.ipynb
@@ -61,14 +61,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = filenames[44]\n",
+    "for file in filenames:\n",
+    "    try:\n",
+    "        print(file)\n",
+    "        nd2 = nd2reader.ND2Reader(file)\n",
+    "        print(\"Channels: \", nd2.metadata[\"channels\"])\n",
+    "        # print('Fields of view: ', nd2.metadata['fields_of_view'])\n",
+    "        # print(nd2.metadata)\n",
+    "        print(nd2.sizes)\n",
+    "        fov_index = 0\n",
+    "        phase_image = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
+    "        fluor_image = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
+    "        fig, axes = plt.subplots(1, 2, sharex=True, sharey=True)\n",
+    "        ax = axes.ravel()\n",
+    "    #         ax[0].imshow(phase_image)\n",
+    "    #         ax[1].imshow(fluor_image, cmap=\"RdGy\")\n",
+    "    except ValueError:\n",
+    "        print(\"ERROR IN\", file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = filenames[20]\n",
     "print(file)\n",
     "nd2 = nd2reader.ND2Reader(file)\n",
     "print(\"Channels: \", nd2.metadata[\"channels\"])\n",
     "# print('Fields of view: ', nd2.metadata['fields_of_view'])\n",
     "# print(nd2.metadata)\n",
     "print(nd2.sizes)\n",
-    "fov_index = 40\n",
+    "fov_index = 0\n",
     "phase_image = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
     "fluor_image = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
     "fig, axes = plt.subplots(1, 2, sharex=True, sharey=True)\n",
