[shenker/microscope_design] Import FPbase data, rank FPs by emission efficiency.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -11,6 +11,7 @@
     "import xarray as xr\n",
     "import numba\n",
     "import re\n",
+    "from cytoolz import update_in, dissoc\n",
     "import requests\n",
     "import holoviews as hv\n",
     "import matplotlib.pyplot as plt\n",
@@ -972,7 +973,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emission_path_spectra[[\"Kinetix final\", \"IMX342 final\", \"Kinetix advantage\"]].plot(\n",
+    "emission_path_spectra[[\"Kinetix final\", \"IMX342 final\"]].plot(\n",
     "    xlim=(300, 800), figsize=(15, 6)\n",
     ")"
    ]
@@ -984,6 +985,469 @@
    "outputs": [],
    "source": [
     "emission_path_spectra[\"Kinetix advantage\"].plot(xlim=(300, 800), figsize=(15, 6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Laser tuning curve"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NKT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nkt = pd.read_excel(\"data/laser_tuning/FIU-15.xlsx\", columns=[\"Power density\"])\n",
+    "nkt.set_index(\"Wavelength (nm)\", inplace=True)\n",
+    "nkt = nkt[~nkt.index.duplicated(keep=\"first\") & ~nkt.index.isnull()]\n",
+    "nkt = simulation.interpolate_dataframe(nkt, excitation_bins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nkt_5nm = nkt.rolling(window=5).sum().fillna(method=\"ffill\")\n",
+    "nkt_5nm.columns = [\"Power\"]\n",
+    "hv.Curve(nkt_5nm).opts(aspect=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Coherent Chameleon Discovery+VUE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "discovery_shg = pd.read_csv(\n",
+    "    \"data/laser_tuning/discovery_vue_shg.csv\", header=1\n",
+    ").set_index(\"lambda\")\n",
+    "# discovery_shg.columns = [\"power\"]\n",
+    "discovery_pump = pd.read_csv(\n",
+    "    \"data/laser_tuning/discovery_vue_pump.csv\", header=1\n",
+    ").set_index(\"lambda\")\n",
+    "discovery_pump.columns = [\"Pump power\"]\n",
+    "discovery = pd.concat(\n",
+    "    [\n",
+    "        discovery_shg,\n",
+    "        discovery_pump,\n",
+    "        discovery_shg.rename(columns={\"SHG power\": \"Power\"}).append(\n",
+    "            discovery_pump.rename(columns={\"Pump power\": \"Power\"})\n",
+    "        ),\n",
+    "    ],\n",
+    "    axis=1,\n",
+    ")\n",
+    "discovery.index.name = \"Wavelength\"\n",
+    "discovery = discovery[~discovery.index.duplicated(keep=\"last\")]\n",
+    "discovery = simulation.interpolate_dataframe(discovery, excitation_bins)\n",
+    "hv.Curve(discovery, \"Wavelength\", \"Power\").opts(width=800)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Objectives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objective = pd.read_csv(\n",
+    "    \"data/objective_transmittance/uplxapo_20x.csv\",\n",
+    "    header=None,\n",
+    "    names=[\"Wavelength\", \"Transmittance\"],\n",
+    ").set_index(\"Wavelength\")\n",
+    "objective /= 100\n",
+    "objective = simulation.interpolate_dataframe(objective, excitation_bins)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(objective).opts(aspect=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Excitation path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excitation_path_spectra = {\n",
+    "    (\"NKT\", \"UPLXAPO_20x\"): objective[\"Transmittance\"] * nkt_5nm[\"Power\"],\n",
+    "    (\"Discovery\", \"UPLXAPO_20x\"): objective[\"Transmittance\"] * discovery[\"Power\"],\n",
+    "}\n",
+    "excitation_path_spectra = pd.concat(excitation_path_spectra, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.log10(excitation_path_spectra).plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FPbase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "fpbase = requests.get(\"https://www.fpbase.org/api/proteins/?format=json\").json()\n",
+    "fpbase_spectra = requests.get(\n",
+    "    \"https://www.fpbase.org/api/proteins/spectra/?format=json\"\n",
+    ").json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _spectrum_to_series(x):\n",
+    "    ary = np.array(x)\n",
+    "    return pd.DataFrame(\n",
+    "        ary[:, 1], index=pd.Index(ary[:, 0], name=\"Wavelength\"), columns=[\"Spectrum\"]\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "fps = {}\n",
+    "for fp in fpbase_spectra:\n",
+    "    fp[\"spectra\"] = {\n",
+    "        s[\"state\"]: update_in(dissoc(s, \"state\"), [\"data\"], _spectrum_to_series)\n",
+    "        for s in fp[\"spectra\"]\n",
+    "    }\n",
+    "for db in (fpbase, fpbase_spectra):\n",
+    "    for fp in db:\n",
+    "        if fp[\"slug\"] not in fps:\n",
+    "            fps[fp[\"slug\"]] = {}\n",
+    "        fps[fp[\"slug\"]].update(fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fps[\"avgfp\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(fpbase_spectra)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(fpbase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set([fp[\"switch_type\"] for fp in fpbase])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = fps[\"avgfp\"][\"spectra\"][\"default_em\"][\"data\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(fps[\"avgfp\"][\"spectra\"][\"default_em\"][\"data\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fps[\"avgfp\"][\"states\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_fps = {\n",
+    "    fp[\"slug\"]: fp\n",
+    "    for fp in fps.values()\n",
+    "    if fp[\"switch_type\"] == \"b\"\n",
+    "    and \"states\" in fp\n",
+    "    and len(fp[\"states\"]) == 1\n",
+    "    and fp[\"states\"][0][\"maturation\"]\n",
+    "    #    and fp[\"states\"][0][\"maturation\"] > 60\n",
+    "    and fp[\"states\"][0][\"brightness\"]\n",
+    "    and fp[\"states\"][0][\"brightness\"] / fp[\"states\"][0][\"maturation\"] > 0.9\n",
+    "    and \"spectra\" in fp\n",
+    "    #     and fp[\"states\"][0][\"ext_coeff\"]\n",
+    "    #     and fp[\"states\"][0][\"qy\"]\n",
+    "    #     and fp[\"states\"][0][\"ext_coeff\"] * fp[\"states\"][0][\"qy\"] / 1e3 > 30\n",
+    "    # and \"spectra\" in fp\n",
+    "    # and \"default_ex\" in fp[\"spectra\"]\n",
+    "    # and \"default_em\" in fp\n",
+    "    # and fp[\"spectra\"][\"default_ex\"][\"ec\"] * fp[\"spectra\"][\"default_em\"][\"qy\"] > 10\n",
+    "}\n",
+    "len(selected_fps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = emission_path_spectra[\"Kinetix final\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.core.indexes.base.Index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.MultiIndex.__bases__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fps[\"avgfp\"][\"spectra\"][\"default_em\"][\"data\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    simulation.interpolate_dataframe(\n",
+    "        fps[\"avgfp\"][\"spectra\"][\"default_em\"][\"data\"], emission_path_spectrum.index\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    simulation.interpolate_dataframe(\n",
+    "        fps[\"avgfp\"][\"spectra\"][\"default_em\"][\"data\"], emission_path_spectrum.index\n",
+    "    )\n",
+    "    * emission_path_spectrum\n",
+    ").sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fps[\"avgfp\"][\"states\"][0][\"ex_max\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_df_nearest(df, val):\n",
+    "    return df.iloc[df.index.get_loc(val, method=\"nearest\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emission_path_spectrum.truncate(before=395)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fps[\"avgfp\"][\"spectra\"][\"default_em\"][\"data\"] * a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fps[\"avgfp\"][\"spectra\"][\"default_em\"][\"data\"].interpolate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_df_nearest(excitation_path_spectrum[\"Transmittance\"], 300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excitation_path_spectrum = excitation_path_spectra[(\"NKT\", \"UPLXAPO_20x\")]\n",
+    "emission_path_spectrum = emission_path_spectra[\"Kinetix final\"]\n",
+    "fp_table = []\n",
+    "for fp in selected_fps.values():\n",
+    "    em_efficiency = (\n",
+    "        simulation.interpolate_dataframe(\n",
+    "            fp[\"spectra\"][\"default_em\"][\"data\"], emission_path_spectrum.index\n",
+    "        )\n",
+    "        * emission_path_spectrum\n",
+    "    ).sum()\n",
+    "    ex_peak_efficiency = get_df_nearest(\n",
+    "        excitation_path_spectrum, fp[\"states\"][0][\"ex_max\"]\n",
+    "    )\n",
+    "    brightness = fp[\"states\"][0][\"brightness\"]\n",
+    "    maturation = fp[\"states\"][0][\"maturation\"]\n",
+    "    em_brightness = brightness * em_efficiency\n",
+    "    emmat_brightness = em_brightness / maturation\n",
+    "    exem_brightness = brightness * em_efficiency * ex_peak_efficiency\n",
+    "    exemmat_brightness = exem_brightness / maturation\n",
+    "    for key in [\"spectra\", \"states\"]:\n",
+    "        fp = dissoc(fp, key)\n",
+    "    fp = {\n",
+    "        \"name\": fp[\"name\"],\n",
+    "        \"brightness\": brightness,\n",
+    "        \"maturation\": maturation,\n",
+    "        \"em_efficiency\": em_efficiency,\n",
+    "        \"ex_peak_efficiency\": ex_peak_efficiency,\n",
+    "        \"em_brightness\": em_brightness,\n",
+    "        \"emmat_brightness\": emmat_brightness,\n",
+    "        \"exem_brightness\": exem_brightness,\n",
+    "        \"exemmat_brightness\": exemmat_brightness,\n",
+    "        **dissoc(fp, \"name\"),\n",
+    "    }\n",
+    "    fp_table.append(fp)\n",
+    "\n",
+    "fp_table = pd.DataFrame(fp_table)\n",
+    "fp_table.sort_values(\"emmat_brightness\", ascending=False).style.set_precision(\n",
+    "    2\n",
+    ").background_gradient(cmap=\"RdPu\", low=0.7, high=0, subset=fp_table.columns[1:9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_fps.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "25000 * 0.79 / 1e3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_fps"
    ]
   }
  ],
