--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
@@ -74,17 +74,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = filenames[2]\n",
+    "file = filenames[5]\n",
     "print(\"file\", file)\n",
     "nd2 = nd2reader.ND2Reader(file)\n",
-    "phase_img = nd2.get_frame_2D(v=0, c=0, z=0)[1000:1600, 500:1200]\n",
-    "fluor_img = nd2.get_frame_2D(v=0, c=1, z=0)[1000:1600, 500:1200]\n",
-    "seg = segment_phase(phase_img)\n",
-    "fig, axes = plt.subplots(1, 3, sharex=True, sharey=True)\n",
+    "fov_index = 0\n",
+    "# phase_img = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
+    "# fluor_img = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
+    "phase_img = nd2.get_frame_2D(v=0, c=0, z=0)[1100:3000, 500:2250]\n",
+    "fluor_img = nd2.get_frame_2D(v=0, c=1, z=0)[1100:3000, 500:2250]\n",
+    "fig, axes = plt.subplots(1, 2, sharex=True, sharey=True)\n",
     "ax = axes.ravel()\n",
     "ax[0].imshow(phase_img)\n",
-    "ax[1].imshow(fluor_img, cmap=\"RdGy\")\n",
-    "ax[2].imshow(seg)"
+    "ax[1].imshow(fluor_img, cmap=\"RdGy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seg = segment_phase(phase_img)\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.imshow(seg)"
    ]
   },
   {
@@ -114,69 +126,144 @@
    "outputs": [],
    "source": [
     "def rdf(\n",
-    "    phase_img, fluor_img, cell_indices=[0], time_allowed=80, filename=\"20200603rdf\"\n",
+    "    phase_img,\n",
+    "    fluor_img,\n",
+    "    cell_indices=[0],\n",
+    "    time_allowed=80,\n",
+    "    filename=\"20200603rdf\",\n",
+    "    start_r=1,\n",
+    "    dr=1,\n",
     "):\n",
-    "    #     nd2 = nd2reader.ND2Reader(img_file)\n",
-    "    #     print(img_file)\n",
-    "    #     for fov_index in fov_indices:\n",
-    "    #         phase_img = nd2.get_frame_2D(v=0, c=0, z=fov_index)\n",
-    "    #         fluor_img = nd2.get_frame_2D(v=0, c=1, z=fov_index)\n",
-    "    #         print('phase and fluor done')\n",
     "    # Segment the image.\n",
     "    seg = segment_phase(phase_img)\n",
-    "    print(\"seg done\")\n",
+    "    #     Get the bakground fluorescence of the image, to subtract from all cell fluorescence.\n",
     "    min_fluor = np.amin(fluor_img)\n",
-    "    print(\"minfluor\", min_fluor)\n",
     "    # Get number of cells in the image.\n",
     "    cells = np.amax(seg)\n",
-    "    print(\"number of cells\", cells)\n",
+    "    # all_r_values will be a list of lists of r values, while all_gr_values will be a list of lists, with\n",
+    "    # the corresponding g(r) (pair correlation function) values. The overall function will return\n",
+    "    # all_r_values, all_gr_values.\n",
+    "    all_r_values = []\n",
+    "    all_gr_values = []\n",
     "    for cell_index in cell_indices:\n",
     "        if cell_index > cells:\n",
     "            print(\"Error in rdf: cell_index larger than number of cells in fov.\")\n",
-    "            break\n",
+    "            pass\n",
+    "        #         Mask the fluorescence image everywhere except for the cell.\n",
     "        cell = np.ma.masked_where(seg != cell_index + 1, fluor_img)\n",
-    "        print(\"max fluor in cell\", cell[222, 172])\n",
-    "        print(\"mean\", np.mean(cell))\n",
     "        # Normalise the intensities of the cell.\n",
     "        cell = (cell - min_fluor) / np.mean(cell)\n",
-    "        print(\"new cell\", cell[222, 172])\n",
+    "        #         ref_point is the 'nucleus' i.e. the point relative to which the pair\n",
+    "        #         correlation function is to be calculated. For now, we set it to the\n",
+    "        #         maximum fluorescence intensity pint of the cell.\n",
     "        ref_point = np.where(cell == np.amax(cell))\n",
-    "        print(\"ref_point\", ref_point)\n",
+    "        #         If there is more than one maximum fluorescence point, take the first one of these.\n",
+    "        if len(ref_point[0]) > 1:\n",
+    "            ref_point = (ref_point[0][0], ref_point[1][0])\n",
     "        # rho is the average 'particle' density, where a particle corresponds to an intensity unit.\n",
-    "        print(\"sum cell\", np.sum(cell))\n",
-    "        print(\"non zero elements\", np.count_nonzero(cell.mask == 0))\n",
-    "        # rho = np.sum(cell)/np.count_nonzero(cell.mask==0)\n",
     "        rho = np.mean(cell)\n",
-    "        print(\"rho\", rho)\n",
-    "        r = 2\n",
+    "        #         print('rho',rho)\n",
+    "        r = start_r\n",
+    "        r_values = []\n",
+    "        #         cell.mask is False where the cell is, and True outside.\n",
     "        mask = np.copy(cell.mask)\n",
     "        gr_values = []\n",
-    "        while not np.all(mask):\n",
+    "        previous_r_vol = 0\n",
+    "        while np.count_nonzero(cell.mask == 0) > 0:\n",
+    "            #             While the cell mask still has 'False' values i.e. not all values have been used in the\n",
+    "            #             pair correlation function calculation somewhere.\n",
+    "            #             Get indices of the points within the current radius (r) of the ref point.\n",
     "            indices_in_r = get_indices_in_r(ref_point, r)\n",
+    "            flat_indices_in_r = [item for sublist in indices_in_r for item in sublist]\n",
+    "            img_shape = np.shape(fluor_img)\n",
+    "            if any(flat_indices_in_r >= np.min(img_shape)):\n",
+    "                indices_to_delete_0 = np.where(indices_in_r[0] >= img_shape[0])[0]\n",
+    "                indices_to_delete_1 = np.where(indices_in_r[1] >= img_shape[1])[0]\n",
+    "                indices_to_delete = np.concatenate(\n",
+    "                    (indices_to_delete_0, indices_to_delete_1)\n",
+    "                )\n",
+    "                indices_to_delete = np.unique(indices_to_delete)\n",
+    "                indices_in_r[0] = np.delete(indices_in_r[0], indices_to_delete)\n",
+    "                indices_in_r[1] = np.delete(indices_in_r[1], indices_to_delete)\n",
+    "            #                 indices_in_r[0] = np.delete(indices_in_r[0], np.where(indices_in_r[0] >= img_shape[0]))\n",
+    "            #                 indices_in_r[1] = np.delete(indices_in_r[1], np.where(indices_in_r[1] >= img_shape[1]))\n",
+    "\n",
+    "            #                     if indices_in_r[0][i]>=img_shape[0] or indices_in_r[1][i]>=img_shape[1]:\n",
+    "            #                         print('deleting0')\n",
+    "            #                         del indices_in_r[0][index]\n",
+    "            #                         del indices_in_r[1][index]\n",
     "            #             print('indicesinr',indices_in_r)\n",
     "            # Calculate numerator (gr_num) and volume element (gr_vol)\n",
+    "            # gr_num should be the sum total of intensities of points in the current shell.\n",
+    "            #             Since cell is masked, we don't need to worry about the non-cell regions.\n",
     "            #             print(cell[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))])\n",
     "            gr_num = np.sum(\n",
     "                cell[list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))]\n",
     "            )\n",
-    "            print(gr_num)\n",
-    "            gr_vol = len(indices_in_r[0])\n",
-    "            print(gr_vol)\n",
+    "            #             print('gr num',cell_index,gr_num)\n",
+    "            #             gr_num_all and gr diff are just to check that the cell masking is working.\n",
+    "            gr_num_all = np.sum(\n",
+    "                cell.data[\n",
+    "                    list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))\n",
+    "                ]\n",
+    "            )\n",
+    "            #             print('gr num all',cell_index,gr_num_all)\n",
+    "            #             print('gr diff',cell_index,gr_num_all-gr_num)\n",
+    "            # gr_vol should be the number of points in the current shell.\n",
+    "            #             Note that the mask masks both the background and the previous regions that we have considered,\n",
+    "            #             so we simply subtract these from our list of indices in the current radius.\n",
+    "            gr_vol = len(indices_in_r[0]) - np.count_nonzero(\n",
+    "                cell.mask[\n",
+    "                    list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))\n",
+    "                ]\n",
+    "            )\n",
+    "            #             update the 'previous_r_vol' for the next radius shell.\n",
+    "            #             print('previous r vol',cell_index,previous_r_vol)\n",
+    "            previous_r_vol = gr_vol\n",
+    "            #             print('gr vol',cell_index,gr_vol)\n",
+    "            #             Update the cell mask so that the values we have now included are not included\n",
+    "            #             in the next dr calculation.\n",
     "            cell.mask[\n",
     "                list(map(int, indices_in_r[0])), list(map(int, indices_in_r[1]))\n",
     "            ] = True\n",
-    "            print(np.count_nonzero(cell.mask == 0))\n",
+    "            #             print('number of non masked values',np.count_nonzero(cell.mask==0))\n",
     "            gr_values.append(gr_num / gr_vol)\n",
-    "            r += 10\n",
+    "            r_values.append(r)\n",
+    "            r += dr\n",
     "        # Since rho is constant for all r, divide all at the same time to save on number of computations.\n",
     "        gr_values = np.array(gr_values)\n",
-    "        print(gr_values)\n",
+    "        #         print('gr_values beofre rho',gr_values)\n",
     "        gr_values = np.divide(gr_values, rho)\n",
-    "        print(gr_values)\n",
-    "        break\n",
-    "\n",
-    "\n",
-    "rdf(phase_img, fluor_img)"
+    "        #         print('gr_values divided by rho',gr_values)\n",
+    "        all_gr_values.append(gr_values)\n",
+    "        all_r_values.append(r_values)\n",
+    "    return all_r_values, all_gr_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test using seg as the fluor image, since this should return g(r) = 1 for all r.\n",
+    "# r_values_list, gr_values_list = rdf(phase_img,seg,cell_indices=np.arange(6),dr=10)\n",
+    "r_values_list, gr_values_list = rdf(\n",
+    "    phase_img, fluor_img, cell_indices=np.arange(20), dr=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "for i in range(len(r_values_list)):\n",
+    "    ax.plot(r_values_list[i], gr_values_list[i])\n",
+    "ax.axhline(y=1, ls=\":\", color=\"k\")\n",
+    "fig.savefig(\"20200613_P_GFPmut3_40x\")"
    ]
   },
   {
